Ligero perfeccionamiento de las tareas